# CBIR

./: LICENSE  README.md
interface/: CMakeLists.txt
interface/include/: alisc_intf.hpp
interface/src/: Evaluation.cpp  Search.cpp  Test.cpp  Train.cpp  alisc_intf.cpp  alisc_intf_back.cpp
model/: dictionary.xml
